# ChangeLog for virtual/cblas
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/virtual/cvs-repo/gentoo-x86/virtual/cblas/ChangeLog,v 1.2 2007/10/22 19:04:28 jer Exp $

  22 Oct 2007; Jeroen Roovers <jer@gentoo.org> cblas-1.0.ebuild:
  Stable for HPPA (USE=lapack).

*cblas-1.0 (10 Oct 2007)

  10 Oct 2007; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +cblas-1.0.ebuild:
  New style virtual for cblas. Version number is abitrary.
